--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <h1>Welcome to Sinatra!</h1>
   <p>Hello, world!</p>
-
+  <% if @errors %>
+  <%= erb :_error, :locals => {errors: @errors }%>
+  <% end %>
+ 
   <table>
     <tr>
       <th>File Description</th>
