--- a/app/views/game.erb
+++ b/app/views/game.erb
@@ -2,4 +2,12 @@
 
 <p><%=@cards.back%></p>
 
-<p><%=@test%></p>
+
+
+
+<% if @game_over %>
+<a href="/user/<%=current_user.id%>">stats</a>
+<% else %>
+<a href="/game/<%=@deck.id%>?card_id=<%=@current_card + 1%>">next</a>
+<% end %>
+</form>
