--- a/public/css/application.css
+++ b/public/css/application.css
@@ -9,14 +9,35 @@ th {
 }
 
 .header{
-  background-color: gray;
-  height: 30px;
+  background-color: rgb(215, 48, 39);
+  height: 50px;
+ line-height: 50px;
 
 }
 
 .header .nav{
-  position: relative;
-  left: 100px;
+  padding-right: 100px;
+  color: #fff;
+  padding-left: 100px
+}
+
+.header .nav a {
+  padding-right: 5px;
+  float: right;
+  line-height: 50px;
+  text-decoration: none;
+}
+
+.header .nav a:visited {
+  color: #fff;
+}
+
+.header #nav-title {
+  font-size: 18pt;
+  width: 50%;
+  margin:0;
+  padding: 0;
+  display: inline;
 }
 
 body, select, input, textarea {  
@@ -68,3 +89,73 @@ h3 {
   font-size: 10px;
   font-style: italic;
 }
+
+#card{
+  width: 680px;
+  height: 300px;
+  margin:0 auto;
+  border: 1px solid;
+  display: table;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #ECF0F1;
+  -webkit-box-shadow: 7px 7px 19px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    7px 7px 19px rgba(50, 50, 50, 0.75);
+  box-shadow:         7px 7px 19px rgba(50, 50, 50, 0.75);
+}
+
+#card-content{
+  margin:auto; 
+  display:table-cell; 
+  vertical-align:middle;
+}
+#card-content p{
+   text-align: center;
+   font-size: 30px;
+   font-family: sans-serif;
+   padding-right: 40px;
+   padding-left: 40px
+  }
+
+#buttons {
+  background-color: red;
+}
+#card-nav{
+  margin:0 auto;
+  padding-top:30px;
+  width: 680px;
+  text-align: center;
+}
+
+#deck-name {
+  margin-top: 150px;
+}
+
+.button {
+  background-color: rgb(69, 117, 180);
+  margin: 20px;
+  margin-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  text-decoration: none;
+  color: #fff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 7px 7px 19px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    7px 7px 19px rgba(50, 50, 50, 0.75);
+  box-shadow:         7px 7px 19px rgba(50, 50, 50, 0.75);
+}
+
+.green {
+  background-color: rgb(12, 227, 255); 
+}
+
+.red {
+  background-color: rgb(252, 141, 89);
+}
+
+  
