--- a/app/views/all_decks.erb
+++ b/app/views/all_decks.erb
@@ -1,5 +1,6 @@
-<h1> Welcome to Deckster </h1>
-<%= current_user.first_name %>
+<div class="intro_container">
+<!--   <h3>Choose a Deck</h3> -->
 <% @decks.each do |d| %>
-<a href="/initiate_new_game?id=<%= d.id %>&user_id=<%= current_user.id %>"><%= d.name %></a>
+<a href="/initiate_new_game?id=<%= d.id %>&user_id=<%= current_user.id %>"><div class="deck_of_cards"><%= d.name.gsub(/\_/, " ").capitalize %></a></div>
 <% end %>
+</div>
