--- a/app/views/all_decks.erb
+++ b/app/views/all_decks.erb
@@ -3,4 +3,6 @@
 <% @decks.each do |d| %>
 <a href="/initiate_new_game?id=<%= d.id %>&user_id=<%= current_user.id %>"><div class="deck_of_cards"><%= d.name.gsub(/\_/, " ").capitalize %></a></div>
 <% end %>
+<br class = "clearFloat">
 </div>
+
